Fix: ensure CSS loads (add style.css + cache-bust)

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="Canonical references for RANNTA on TON: protocol DOI, marketplace DOI releases, ArcWallet DOI." />
   <meta name="twitter:image" content="https://ranntaverse.app/og.svg" />
 
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/style.css?v=2" />
 
   <!-- Canonical JSON-LD graph preserved from your current hub -->
   <script type="application/ld+json">
@@ -467,3 +467,4 @@
   </script>
 </body>
 </html>
+
