Add minimal Hub logo SVG + favicon

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>RANNTA Ecosystem Hub — Token, NFTs, Marketplace on TON</title>
-  <meta name="description" content="Official ecosystem hub for RANNTA on TON. Canonical DOI graph (Zenodo) for protocol, marketplace releases, and ArcWallet." />
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+  <link rel="icon" href="/favicon.svg" sizes="any" />
+<meta name="description" content="Official ecosystem hub for RANNTA on TON. Canonical DOI graph (Zenodo) for protocol, marketplace releases, and ArcWallet." />
   <meta name="keywords" content="RANNTA,TON,The Open Network,Jetton,NFT,NFT marketplace,RANNTAverse,ArcWallet,Zenodo,DOI,knowledge graph,Schema.org,protocol-entity,STON.fi" />
   <link rel="canonical" href="https://ranntaverse.app/" />
 
@@ -83,7 +85,7 @@
     <div class="container">
       <div class="row">
         <div class="brand">
-          <div class="brandMark" aria-hidden="true"></div>
+          <img class="brandLogo" src="/rannta-hub-logo.svg" alt="RANNTA Hub" width="34" height="34" />
           <div class="brandTitle">
             <strong>RANNTA Ecosystem Hub</strong>
             <span>Static knowledge + canonical references</span>
@@ -467,4 +469,5 @@
   </script>
 </body>
 </html>
+
 
