Update verify page with official Discord, ORCID, social links, emails, and websites

--- a/public/verify/index.html
+++ b/public/verify/index.html
@@ -114,9 +114,18 @@
           <div class="cardTop"><div class="badge">Builder</div><div class="badge">Profile</div></div>
           <h3>Builder Profile</h3>
           <p>Primary builder profile and code provenance.</p>
+        <p style="margin-top:6px">
+          <a href="https://orcid.org/0009-0001-9044-4662" target="_blank" rel="noreferrer">ORCID: 0009-0001-9044-4662</a>
+        </p>
         </a>
       </div>
-    </section>
+            <a class="card" target="_blank" rel="noreferrer" href="https://discord.com/invite/AFWUJEr6nx">
+          <div class="cardTop"><div class="badge">Discord</div><div class="badge">Community</div></div>
+          <h3>Discord (Permanent Invite)</h3>
+          <p>Official Discord community channel.</p>
+        </a>
+
+</section>
 
     <section class="section">
       <div class="sectionTitle">
@@ -148,13 +157,13 @@
       </div>
 
       <div class="cards">
-        <a class="card" target="_blank" rel="noreferrer" href="https://t.me/REPLACE_ME">
+        <a class="card" target="_blank" rel="noreferrer" href="https://t.me/rannta_coin">
           <div class="cardTop"><div class="badge">Telegram</div><div class="badge">Community</div></div>
           <h3>Telegram</h3>
           <p>Replace URL with your official Telegram link.</p>
         </a>
 
-        <a class="card" target="_blank" rel="noreferrer" href="https://x.com/REPLACE_ME">
+        <a class="card" target="_blank" rel="noreferrer" href="https://x.com/ranntacoin">
           <div class="cardTop"><div class="badge">X</div><div class="badge">Updates</div></div>
           <h3>X (Twitter)</h3>
           <p>Replace URL with your official X account.</p>
@@ -166,7 +175,7 @@
           <p>Primary builder and source provenance.</p>
         </a>
 
-        <a class="card" href="mailto:REPLACE_ME@rannta.com">
+        <a class="card" href="mailto:ilia@rannta.com">
           <div class="cardTop"><div class="badge">Email</div><div class="badge">Contact</div></div>
           <h3>Email</h3>
           <p>Replace with your official contact email.</p>
@@ -205,3 +214,4 @@
   </main>
 </body>
 </html>
+
