--- a/public/verify/index.html
+++ b/public/verify/index.html
@@ -16,6 +16,48 @@
 
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="stylesheet" href="/style.css?v=3" />
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "name": "RANNTA",
+      "url": "https://rannta.com/",
+      "sameAs": [
+        "https://x.com/ranntacoin",
+        "https://t.me/rannta_coin",
+        "https://discord.com/invite/AFWUJEr6nx",
+        "https://medium.com/@ranntaofficial",
+        "https://github.com/ilia144000",
+        "https://orcid.org/0009-0001-9044-4662",
+        "https://ranntaverse.app/",
+        "https://ranntaverse.art/",
+        "https://ranntaexchange.com/"
+      ],
+      "contactPoint": [
+        { "@type": "ContactPoint", "contactType": "support", "email": "info@rannta.com" },
+        { "@type": "ContactPoint", "contactType": "contact", "email": "contact@rannta.com" }
+      ]
+    },
+    {
+      "@type": "Person",
+      "name": "Ilia Ghafari",
+      "url": "https://rannta.com/",
+      "sameAs": [
+        "https://orcid.org/0009-0001-9044-4662",
+        "https://github.com/ilia144000"
+      ],
+      "email": "ilia@rannta.com"
+    },
+    {
+      "@type": "WebSite",
+      "name": "RANNTA Ecosystem Hub",
+      "url": "https://ranntaverse.app/"
+    }
+  ]
+}
+</script>
 </head>
 
 <body>
@@ -35,11 +77,22 @@
           <a href="/#quick">Quick</a>
           <a href="/#ecosystem">Ecosystem</a>
           <a href="/#references">References</a>
-          <a href="/verify/">Verify</a>
+          <a href="/contact/">Contact</a><a href="/verify/">Verify</a>
         </nav>
-      </div>
-    </div>
-  </header>
+<div class="social" aria-label="Official channels">
+  <a class="socialLink" href="https://t.me/rannta_coin" target="_blank" rel="noreferrer" aria-label="Telegram">
+    <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M9.4 15.6 9.2 19c.5 0 .8-.2 1.1-.5l2.6-2.4 5.3 3.9c1 .6 1.7.3 2-.9l3.6-16.9c.4-1.7-.6-2.4-1.6-2L1.4 10.1c-1.6.6-1.6 1.5-.3 1.9l5.7 1.8L20 5.6c.6-.4 1.1-.2.7.2"/></svg>
+  </a>
+  <a class="socialLink" href="https://x.com/ranntacoin" target="_blank" rel="noreferrer" aria-label="X">
+    <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M18.9 2H22l-6.8 7.8L23 22h-6.6l-5.2-6.6L5.4 22H2.3l7.3-8.4L1 2h6.8l4.7 6.1L18.9 2Zm-1.2 18h1.7L6.2 3.9H4.4"/></svg>
+  </a>
+  <a class="socialLink" href="https://discord.com/invite/AFWUJEr6nx" target="_blank" rel="noreferrer" aria-label="Discord">
+    <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20.3 5.3A17.6 17.6 0 0 0 16 4l-.2.4a12.6 12.6 0 0 1 3 .9c-2.7-1.3-5.5-1.3-8.3 0a12.6 12.6 0 0 1 3-.9L13.3 4A17.6 17.6 0 0 0 9 5.3C6.4 9 5.7 12.6 6 16.2a17 17 0 0 0 5 2.6l.7-1.1a10.6 10.6 0 0 1-1.6-.8l.4-.3c3.1 1.5 6.3 1.5 9.4 0l.4.3c-.5.3-1 .6-1.6.8l.7 1.1a17 17 0 0 0 5-2.6c.3-3.6-.4-7.2-3-10.9ZM10 14.6c-.7 0-1.3-.7-1.3-1.6s.6-1.6 1.3-1.6 1.3.7 1.3 1.6-.6 1.6-1.3 1.6Zm4 0c-.7 0-1.3-.7-1.3-1.6s.6-1.6 1.3-1.6 1.3.7 1.3 1.6-.6 1.6-1.3 1.6Z"/></svg>
+  </a>
+</div>
+</div>
+</div>
+</header>
 
   <main class="container">
     <section class="hero" style="padding-bottom:10px">
@@ -190,7 +243,7 @@
           <div style="display:flex; gap:12px; flex-wrap:wrap">
             <a href="/#start">Top</a>
             <a href="/#references">References</a>
-            <a href="/verify/">Verify</a>
+            <a href="/contact/">Contact</a><a href="/verify/">Verify</a>
           </div>
         </div>
       </div>
@@ -214,4 +267,6 @@
   </main>
 </body>
 </html>
+
+
 
