Add home-linked brand, minimal breadcrumb, and CSS for navigation

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -65,12 +65,12 @@
   <header class="topbar">
     <div class="container">
       <div class="row">
-        <div class="brand">
+        <a class="brandLink" href="/"><div class="brand">
           <img class="brandLogo" src="/rannta-hub-logo.svg" alt="RANNTA Hub" width="34" height="34" />
           <div class="brandTitle">
             <strong>RANNTA Ecosystem Hub</strong>
             <span>Static knowledge + canonical references</span>
-          </div>
+          </div></a>
         </div>
 
         <nav class="nav">
@@ -96,6 +96,7 @@
       </div>
     </div>
   </header>
+<nav class="breadcrumb"><a href="/">Home</a><span class="sep">/</span><span>Contact</span></nav>
 
   <main class="container">
     <section class="hero" style="padding-bottom:10px">
@@ -218,3 +219,5 @@
   </main>
 </body>
 </html>
+
+
