--- a/public/index.html
+++ b/public/index.html
@@ -126,12 +126,12 @@
   <header class="topbar">
     <div class="container">
       <div class="row">
-        <div class="brand">
+        <a class="brandLink" href="/"><div class="brand">
           <img class="brandLogo" src="/rannta-hub-logo.svg" alt="RANNTA Hub" width="34" height="34" />
           <div class="brandTitle">
             <strong>RANNTA Ecosystem Hub</strong>
             <span>Static knowledge + canonical references</span>
-          </div>
+          </div></a>
         </div>
 
         <nav class="nav">
@@ -522,6 +522,7 @@
   </script>
 </body>
 </html>
+
 
 
 
