--- a/public/verify/index.html
+++ b/public/verify/index.html
@@ -248,7 +248,18 @@
           </div>
         </div>
       </div>
-    </footer>
+    <div class="footerSocial" aria-label="Official channels">
+  <a href="https://t.me/rannta_coin" target="_blank" rel="noreferrer" aria-label="Telegram">
+    <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M9.4 15.6 9.2 19c.5 0 .8-.2 1.1-.5l2.6-2.4 5.3 3.9c1 .6 1.7.3 2-.9l3.6-16.9c.4-1.7-.6-2.4-1.6-2L1.4 10.1c-1.6.6-1.6 1.5-.3 1.9l5.7 1.8L20 5.6c.6-.4 1.1-.2.7.2"/></svg>
+  </a>
+  <a href="https://x.com/ranntacoin" target="_blank" rel="noreferrer" aria-label="X">
+    <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M18.9 2H22l-6.8 7.8L23 22h-6.6l-5.2-6.6L5.4 22H2.3l7.3-8.4L1 2h6.8l4.7 6.1L18.9 2Zm-1.2 18h1.7L6.2 3.9H4.4"/></svg>
+  </a>
+  <a href="https://discord.com/invite/AFWUJEr6nx" target="_blank" rel="noreferrer" aria-label="Discord">
+    <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20.3 5.3A17.6 17.6 0 0 0 16 4l-.2.4a12.6 12.6 0 0 1 3 .9c-2.7-1.3-5.5-1.3-8.3 0a12.6 12.6 0 0 1 3-.9L13.3 4A17.6 17.6 0 0 0 9 5.3C6.4 9 5.7 12.6 6 16.2a17 17 0 0 0 5 2.6l.7-1.1a10.6 10.6 0 0 1-1.6-.8l.4-.3c3.1 1.5 6.3 1.5 9.4 0l.4.3c-.5.3-1 .6-1.6.8l.7 1.1a17 17 0 0 0 5-2.6c.3-3.6-.4-7.2-3-10.9ZM10 14.6c-.7 0-1.3-.7-1.3-1.6s.6-1.6 1.3-1.6 1.3.7 1.3 1.6-.6 1.3-1.3 1.6Zm4 0c-.7 0-1.3-.7-1.3-1.6s.6-1.6 1.3-1.6 1.3.7 1.3 1.6-.6 1.3-1.3 1.6Z"/></svg>
+  </a>
+</div>
+</footer>
 
     <!-- Machine-readable JSON-LD (minimal) -->
     <script type="application/ld+json">
@@ -268,6 +279,7 @@
   </main>
 </body>
 </html>
+
 
 
 
