--- a/public/references.html
+++ b/public/references.html
@@ -4,9 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>References — RANNTAverse</title>
+
   <meta name="description" content="Canonical references and authority sources for the RANNTA ecosystem." />
-  <link rel="canonical" href="https://ranntaverse.app/references" />
   <meta name="robots" content="index,follow" />
+
+  <link rel="canonical" href="https://ranntaverse.app/references.html" />
 </head>
 <body>
   <main>
