--- a/public/references.html
+++ b/public/references.html
@@ -1,19 +1,41 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>References — RANNTAverse</title>
+<main>
+  <h1>Canonical References</h1>
 
-  <meta name="description" content="Canonical references and authority sources for the RANNTA ecosystem." />
-  <meta name="robots" content="index,follow" />
+  <p>
+    This page lists authoritative, verifiable references that establish the
+    provenance, technical foundation, and public record of the RANNTA ecosystem.
+  </p>
 
-  <link rel="canonical" href="https://ranntaverse.app/references.html" />
-</head>
-<body>
-  <main>
-    <h1>Canonical References</h1>
-    <p>Authoritative references for the RANNTA ecosystem hub.</p>
-  </main>
-</body>
-</html>
+  <h2>Primary References</h2>
+
+  <ul>
+    <li>
+      <strong>GitHub — RANNTA Ecosystem Repository</strong><br />
+      <a href="https://github.com/ilia144000/rannta-ecosystem" target="_blank" rel="noopener">
+        https://github.com/ilia144000/rannta-ecosystem
+      </a><br />
+      Source code, canonical documentation, and technical history of the RANNTA ecosystem.
+    </li>
+
+    <li>
+      <strong>Zenodo — Canonical Archive & DOI Record</strong><br />
+      <a href="https://zenodo.org/" target="_blank" rel="noopener">
+        https://zenodo.org/
+      </a><br />
+      Long-term archival infrastructure used for immutable academic and technical records.
+    </li>
+
+    <li>
+      <strong>Medium — Official Announcements</strong><br />
+      <a href="https://medium.com/@ranntaofficial" target="_blank" rel="noopener">
+        https://medium.com/@ranntaofficial
+      </a><br />
+      Public announcements, protocol narratives, and ecosystem disclosures.
+    </li>
+  </ul>
+
+  <p>
+    These references collectively provide transparency, authorship attribution,
+    and long-term accessibility for the RANNTA ecosystem.
+  </p>
+</main>
