--- a/public/references.html
+++ b/public/references.html
@@ -1,41 +1,84 @@
-<main>
-  <h1>Canonical References</h1>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <p>
-    This page lists authoritative, verifiable references that establish the
-    provenance, technical foundation, and public record of the RANNTA ecosystem.
-  </p>
+  <title>References — RANNTAverse</title>
+  <meta name="description" content="Canonical references and authority sources for the RANNTA ecosystem." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://ranntaverse.app/references.html" />
 
-  <h2>Primary References</h2>
+  <!-- JSON-LD: Canonical References -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CreativeWork",
+    "@id": "https://ranntaverse.app/references.html#references",
+    "name": "RANNTA Ecosystem — Canonical References",
+    "url": "https://ranntaverse.app/references.html",
+    "description": "Authoritative references, repositories, and archival sources documenting the RANNTA ecosystem.",
+    "inLanguage": "en",
+    "publisher": {
+      "@type": "Organization",
+      "name": "RANNTA Ecosystem",
+      "url": "https://ranntaverse.app/"
+    },
+    "about": [
+      {
+        "@type": "SoftwareSourceCode",
+        "name": "RANNTA Ecosystem Repository",
+        "codeRepository": "https://github.com/ilia144000/rannta-ecosystem"
+      },
+      {
+        "@type": "Dataset",
+        "name": "RANNTA Canonical Archive",
+        "url": "https://zenodo.org/"
+      },
+      {
+        "@type": "CreativeWork",
+        "name": "RANNTA Official Publications",
+        "url": "https://medium.com/@ranntaofficial"
+      }
+    ]
+  }
+  </script>
+</head>
 
-  <ul>
-    <li>
-      <strong>GitHub — RANNTA Ecosystem Repository</strong><br />
-      <a href="https://github.com/ilia144000/rannta-ecosystem" target="_blank" rel="noopener">
-        https://github.com/ilia144000/rannta-ecosystem
-      </a><br />
-      Source code, canonical documentation, and technical history of the RANNTA ecosystem.
-    </li>
+<body>
+  <main>
+    <h1>Canonical References</h1>
 
-    <li>
-      <strong>Zenodo — Canonical Archive & DOI Record</strong><br />
-      <a href="https://zenodo.org/" target="_blank" rel="noopener">
-        https://zenodo.org/
-      </a><br />
-      Long-term archival infrastructure used for immutable academic and technical records.
-    </li>
+    <p>
+      This page lists authoritative, verifiable references that establish the
+      provenance, technical foundation, and public record of the RANNTA ecosystem.
+    </p>
 
-    <li>
-      <strong>Medium — Official Announcements</strong><br />
-      <a href="https://medium.com/@ranntaofficial" target="_blank" rel="noopener">
-        https://medium.com/@ranntaofficial
-      </a><br />
-      Public announcements, protocol narratives, and ecosystem disclosures.
-    </li>
-  </ul>
+    <h2>Primary References</h2>
 
-  <p>
-    These references collectively provide transparency, authorship attribution,
-    and long-term accessibility for the RANNTA ecosystem.
-  </p>
-</main>
+    <ul>
+      <li>
+        <strong>GitHub — RANNTA Ecosystem Repository</strong><br />
+        <a href="https://github.com/ilia144000/rannta-ecosystem" target="_blank" rel="noopener">
+          https://github.com/ilia144000/rannta-ecosystem
+        </a>
+      </li>
+
+      <li>
+        <strong>Zenodo — Canonical Archive</strong><br />
+        <a href="https://zenodo.org/" target="_blank" rel="noopener">
+          https://zenodo.org/
+        </a>
+      </li>
+
+      <li>
+        <strong>Medium — Official Announcements</strong><br />
+        <a href="https://medium.com/@ranntaofficial" target="_blank" rel="noopener">
+          https://medium.com/@ranntaofficial
+        </a>
+      </li>
+    </ul>
+
+  </main>
+</body>
+</html>
